samples/web-app-managed-identity/scripts/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vacation-planner-blob
  namespace: vacation-planner-blob
  labels:
    app: vacation-planner-blob
spec:
  type: ClusterIP
  selector:
    app: vacation-planner-blob
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
