samples/web-app-managed-identity/scripts/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
    cert-manager.io/issuer: vacation-planner-blob-issuer
  name: vacation-planner-blob
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: local.echo.babosbird.com
    name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - hostname: local.echo.babosbird.com
    name: https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: vacation-planner-blob-tls-secret
